Arreglos en las vistas, modulos de beneficiario, colectivo, poliza y recibo

--- a/src/views/apPolicyForm.ejs
+++ b/src/views/apPolicyForm.ejs
@@ -400,6 +400,7 @@
                                                         <option value="EMISIÓN">EMISIÓN</option>
                                                         <option value="RENOVACIÓN">RENOVACIÓN</option>
                                                         <option value="MODIFICACIÓN">MODIFICACIÓN</option>
+                                                        <option value="FACTURACIÓN">FACTURACIÓN</option>
                                                     </select>
                                                 </div>
                                             </div>
