--- a/src/views/editReceipt.ejs
+++ b/src/views/editReceipt.ejs
@@ -184,6 +184,7 @@
                                                 <option value="EMISIÓN">EMISIÓN</option>
                                                 <option value="RENOVACIÓN">RENOVACIÓN</option>
                                                 <option value="MODIFICACIÓN">MODIFICACIÓN</option>
+                                                <option value="FACTURACIÓN">FACTURACIÓN</option>
                                             </select>
                                         </div>
                                     </div>
