--- a/src/views/funeralPolicyForm.ejs
+++ b/src/views/funeralPolicyForm.ejs
@@ -314,7 +314,7 @@
                                                         name="cedula_beneficiario"
                                                         id="cedula_beneficiario"
                                                         placeholder="Cédula del Beneficiario *" 
-                                                        class="form-control number_format"
+                                                        class="form-control cedula"
                                                         required
                                                     >
                                                 </div>
@@ -516,6 +516,7 @@
                                                         <option value="EMISIÓN">EMISIÓN</option>
                                                         <option value="RENOVACIÓN">RENOVACIÓN</option>
                                                         <option value="MODIFICACIÓN">MODIFICACIÓN</option>
+                                                        <option value="FACTURACIÓN">FACTURACIÓN</option>
                                                     </select>
                                                 </div>
                                             </div>
