--- a/src/views/travelPolicyForm.ejs
+++ b/src/views/travelPolicyForm.ejs
@@ -384,6 +384,7 @@
                                                         <option value="EMISIÓN">EMISIÓN</option>
                                                         <option value="RENOVACIÓN">RENOVACIÓN</option>
                                                         <option value="MODIFICACIÓN">MODIFICACIÓN</option>
+                                                        <option value="FACTURACIÓN">FACTURACIÓN</option>
                                                     </select>
                                                 </div>
                                             </div>
