--- a/src/views/vehicleCollectiveForm.ejs
+++ b/src/views/vehicleCollectiveForm.ejs
@@ -447,6 +447,7 @@
                                                         <option value="EMISIÓN">EMISIÓN</option>
                                                         <option value="RENOVACIÓN">RENOVACIÓN</option>
                                                         <option value="MODIFICACIÓN">MODIFICACIÓN</option>
+                                                        <option value="FACTURACIÓN">FACTURACIÓN</option>
                                                     </select>
                                                 </div>
                                             </div>
