--- a/src/views/vehiclePolicyForm.ejs
+++ b/src/views/vehiclePolicyForm.ejs
@@ -387,7 +387,7 @@
                                                         id="cedula_conductor"
                                                         placeholder="Cédula"
                                                         onkeyup="pasarNombreAseguradoConductor();" 
-                                                        class="form-control number_format"
+                                                        class="form-control cedula"
                                                         oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                                                     >
                                                 </div>
@@ -664,6 +664,7 @@
                                                         <option value="EMISIÓN">EMISIÓN</option>
                                                         <option value="RENOVACIÓN">RENOVACIÓN</option>
                                                         <option value="MODIFICACIÓN">MODIFICACIÓN</option>
+                                                        <option value="FACTURACIÓN">FACTURACIÓN</option>
                                                     </select>
                                                 </div>
                                             </div>
