--- a/src/views/globalLossRatio.ejs
+++ b/src/views/globalLossRatio.ejs
@@ -24,13 +24,12 @@
                     <div class="form-group row"><label class="col-sm-2 col-form-label">Siniestro</label>
                         <div class="col-sm-10">
                             <input 
-                                type="number"
-                                step="0.01"
+                                type="text"
                                 name="gasto_siniestro_incurrido"
                                 id="gasto_siniestro_incurrido" 
                                 placeholder="Gastos de siniestros incurridos *"
                                 onkeyup="pasarGastos();"
-                                class="form-control"
+                                class="form-control number_format"
                                 required
                             >
                         </div>
@@ -40,11 +39,10 @@
                     <div class="form-group row"><label class="col-sm-2 col-form-label">Porcentaje de Siniestralidad</label>
                         <div class="col-sm-10">
                             <input 
-                                type="number"
-                                step="0.01"
+                                type="text"
                                 name="porcentaje_siniestralidad"
                                 id="porcentaje_siniestralidad" 
-                                class="form-control"
+                                class="form-control number_format"
                                 required
                             >
                         </div>
@@ -114,13 +112,39 @@
     var premium = <%- JSON.stringify(totalPremium) %>;
     function pasarGastos() {
         var incurredClaimAmount = document.getElementById("gasto_siniestro_incurrido").value
+        if ((incurredClaimAmount.indexOf(',') !== -1) && (incurredClaimAmount.indexOf('.') !== -1)) {
+            incurredClaimAmount = incurredClaimAmount.replace(",", ".");
+            incurredClaimAmount = incurredClaimAmount.replace(".", ",");
+            incurredClaimAmount = parseFloat(incurredClaimAmount.replace(/,/g,''));
+        } else if (incurredClaimAmount.indexOf(',') !== -1) {
+            incurredClaimAmount = incurredClaimAmount.replace(",", ".");
+            incurredClaimAmount = parseFloat(incurredClaimAmount);
+        } else if (incurredClaimAmount.indexOf('.') !== -1) {
+            incurredClaimAmount = incurredClaimAmount.replace(".", ",");
+            incurredClaimAmount = parseFloat(incurredClaimAmount.replace(/,/g,''));
+        }
         var lossRatio = premium / incurredClaimAmount;
         if (incurredClaimAmount === '') {
             document.getElementById("porcentaje_siniestralidad").value = '';
         } else {
-            document.getElementById("porcentaje_siniestralidad").value = lossRatio.toFixed(2);
+            lossRatio = lossRatio.toFixed(2);
+            lossRatio = lossRatio.toString().replace('.', ',').replace(/(\d)(?=(\d{3})+(?!\d))/g,'$1.');
+            document.getElementById("porcentaje_siniestralidad").value = lossRatio;
         }
     }
+</script>
+
+<script>
+    var separador = document.getElementsByClassName('number_format');
+    for (var i = 0 ; i < separador.length; i++) {
+        separador[i].addEventListener('input', (e) => {
+            var entrada = e.target.value.split(','),
+            parteEntera = entrada[0].replace(/\./g, ''),
+            parteDecimal = entrada[1],
+            salida = parteEntera.replace(/(\d)(?=(\d{3})+(?!\d))/g, "$1.");
+            e.target.value = salida + (parteDecimal !== undefined ? ',' + parteDecimal.replace(/([0-9])([0-9]{2})$/,'') : '');
+        }, false); 
+    } 
 </script>
 
 </body>
